--- a/index.html
+++ b/index.html
@@ -70,32 +70,59 @@
     </div>
   </section>
 
-  <!-- SERVICES (glow cards) -->
-  <section id="services" class="py-20">
-    <div class="max-w-6xl mx-auto px-6 text-center">
-      <h2 class="text-5xl font-extrabold mb-6 text-purple-300">Services</h2>
-      <p class="text-lg text-neutral-300 mb-14">
-        We specialize in bold visuals and ad-ready assets that elevate your brand.
-      </p>
+<!-- SERVICES -->
+<section id="services" class="py-20">
+  <div class="max-w-6xl mx-auto px-6 text-center">
+    <h2 class="text-5xl font-extrabold mb-6 text-pink-300">Services</h2>
+    <p class="text-lg text-neutral-300 mb-14">
+      We specialize in bold visuals and ad-ready assets that elevate your brand.
+    </p>
 
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
-        <!-- Designs -->
-        <div class="p-10 rounded-2xl bg-white/5 border border-white/10 shadow-[0_0_80px_rgba(168,85,247,0.15)] hover:shadow-[0_0_110px_rgba(168,85,247,0.30)] transition">
-          <h3 class="text-2xl font-bold text-purple-300 mb-4">Designs</h3>
-          <p class="text-neutral-300 mb-6">
-            Apparel graphics, posters, and artwork tailored to your brand.
-          </p>
-          <ul class="space-y-3 text-left">
-            <li class="flex items-start">
-              <span class="text-purple-300 mr-3">✔</span>
-              Unique, custom visuals
-            </li>
-            <li class="flex items-start">
-              <span class="text-purple-300 mr-3">✔</span>
-              Mockups for clothing lines, posters, and packaging
-            </li>
-          </ul>
-        </div>
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
+      
+      <!-- Designs -->
+      <div class="p-10 rounded-2xl bg-white text-neutral-900 shadow-[0_15px_50px_rgba(0,0,0,0.35)] hover:shadow-[0_20px_70px_rgba(168,85,247,0.4)] transition transform hover:-translate-y-2">
+        <h3 class="text-2xl font-bold text-purple-600 mb-4">Designs</h3>
+        <p class="text-neutral-700 mb-6">
+          Apparel graphics, posters, and artwork tailored to your brand.
+        </p>
+        <ul class="space-y-3 text-left">
+          <li class="flex items-start">
+            <span class="text-purple-600 mr-3">✔</span>
+            Unique, custom visuals
+          </li>
+          <li class="flex items-start">
+            <span class="text-purple-600 mr-3">✔</span>
+            Mockups for clothing lines, posters, and packaging
+          </li>
+        </ul>
+      </div>
+
+      <!-- Ad Creatives -->
+      <div class="p-10 rounded-2xl bg-white text-neutral-900 shadow-[0_15px_50px_rgba(0,0,0,0.35)] hover:shadow-[0_20px_70px_rgba(236,72,153,0.4)] transition transform hover:-translate-y-2">
+        <h3 class="text-2xl font-bold text-pink-600 mb-4">Ad Creatives</h3>
+        <p class="text-neutral-700 mb-6">
+          High-performing Instagram/TikTok visuals designed to convert.
+        </p>
+        <ul class="space-y-3 text-left">
+          <li class="flex items-start">
+            <span class="text-pink-600 mr-3">✔</span>
+            Short reels for TikTok/Instagram
+          </li>
+          <li class="flex items-start">
+            <span class="text-pink-600 mr-3">✔</span>
+            Eye-catching image ads
+          </li>
+          <li class="flex items-start">
+            <span class="text-pink-600 mr-3">✔</span>
+            Ready-to-upload export packs for Meta Ads Manager & TikTok Ads
+          </li>
+        </ul>
+      </div>
+
+    </div>
+  </div>
+</section>
 
         <!-- Ad Creatives -->
         <div class="p-10 rounded-2xl bg-white/5 border border-white/10 shadow-[0_0_80px_rgba(236,72,153,0.14)] hover:shadow-[0_0_110px_rgba(236,72,153,0.28)] transition">
