--- a/index.html
+++ b/index.html
@@ -126,33 +126,31 @@
 
    
 
-  <!-- ADS -->
+ <!-- CLOTHING BRAND ADS -->
   <section id="ads" class="max-w-6xl mx-auto px-6 py-20">
-    <h2 class="text-3xl font-bold mb-6">Ads</h2>
-
-    <!-- Clothing Brand Ads -->
+    <h2 class="text-3xl font-bold mb-6">Clothing Brand Advertisements</h2>
     <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-6">
-      <div class="rounded-2xl overflow-hidden border border-white/10 bg-white/5">
-        <img src="hs.png" alt="Clothing Ad" class="block w-full h-[420px] object-cover">
+      <div class="rounded-2xl overflow-hidden border border-white/10 flex items-center justify-center bg-neutral-900">
+        <img src="hs.png" alt="Clothing Ad" class="object-contain h-full w-full">
       </div>
-      <div class="rounded-2xl overflow-hidden border border-white/10 bg-white/5">
-        <img src="ghostfit.png" alt="Ghostfit" class="block w-full h-[420px] object-cover">
+      <div class="rounded-2xl overflow-hidden border border-white/10 flex items-center justify-center bg-neutral-900">
+        <img src="ghostfit.png" alt="Ghostfit" class="object-contain h-full w-full">
       </div>
-      <div class="rounded-2xl overflow-hidden border border-white/10 bg-white/5">
-        <img src="stussy.png" alt="Stussy" class="block w-full h-[420px] object-cover">
+      <div class="rounded-2xl overflow-hidden border border-white/10 flex items-center justify-center bg-neutral-900">
+        <img src="stussy.png" alt="Stussy" class="object-contain h-full w-full">
       </div>
-      <div class="rounded-2xl overflow-hidden border border-white/10 bg-white/5">
-        <img src="statueofliberty.png" alt="Statue of Liberty" class="block w-full h-[420px] object-cover">
+      <div class="rounded-2xl overflow-hidden border border-white/10 flex items-center justify-center bg-neutral-900">
+        <img src="statueofliberty.png" alt="Statue of Liberty" class="object-contain h-full w-full">
       </div>
     </div>
 
     <h3 class="text-xl font-bold mt-12 mb-4">Image Ads</h3>
     <div class="grid sm:grid-cols-2 gap-6">
-      <div class="rounded-2xl overflow-hidden border border-white/10 bg-white/5">
-        <img src="imagead1.png" alt="Image Ad 1" class="block w-full h-[550px] object-cover">
+      <div class="rounded-2xl overflow-hidden border border-white/10 flex items-center justify-center bg-neutral-900">
+        <img src="imagead1.png" alt="Image Ad 1" class="object-contain h-full w-full">
       </div>
-      <div class="rounded-2xl overflow-hidden border border-white/10 bg-white/5">
-        <img src="imagead2.png" alt="Image Ad 2" class="block w-full h-[550px] object-cover">
+      <div class="rounded-2xl overflow-hidden border border-white/10 flex items-center justify-center bg-neutral-900">
+        <img src="imagead2.png" alt="Image Ad 2" class="object-contain h-full w-full">
       </div>
     </div>
   </section>
@@ -161,25 +159,14 @@
   <section id="designs" class="max-w-6xl mx-auto px-6 py-20">
     <h2 class="text-3xl font-bold mb-6">Designs</h2>
     <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
-      <div class="rounded-2xl overflow-hidden border border-white/10 bg-white/5">
-        <img src="undrwrld.jpg" alt="Undrwrld" class="block w-full h-[420px] object-cover">
-      </div>
-      <div class="rounded-2xl overflow-hidden border border-white/10 bg-white/5">
-        <img src="bmw.jpg" alt="BMW" class="block w-full h-[420px] object-cover">
-      </div>
-      <div class="rounded-2xl overflow-hidden border border-white/10 bg-white/5">
-        <!-- Correct filename -->
-        <img src="skele.png" alt="Skeleton" class="block w-full h-[420px] object-cover">
-      </div>
-      <div class="rounded-2xl overflow-hidden border border-white/10 bg-white/5">
-        <img src="horses.jpg" alt="Horses" class="block w-full h-[420px] object-cover">
-      </div>
-      <div class="rounded-2xl overflow-hidden border border-white/10 bg-white/5">
-        <img src="dog.jpg" alt="Dog" class="block w-full h-[420px] object-cover">
-      </div>
+      <div class="rounded-2xl overflow-hidden border border-white/10"><img src="undrwrld.jpg" alt="Undrwrld" class="object-cover w-full h-full"></div>
+      <div class="rounded-2xl overflow-hidden border border-white/10"><img src="bmw.jpg" alt="BMW" class="object-cover w-full h-full"></div>
+      <div class="rounded-2xl overflow-hidden border border-white/10"><img src="skele.png" alt="Skeleton" class="object-cover w-full h-full"></div>
+      <div class="rounded-2xl overflow-hidden border border-white/10"><img src="horses.jpg" alt="Horses" class="object-cover w-full h-full"></div>
+      <div class="rounded-2xl overflow-hidden border border-white/10"><img src="dog.jpg" alt="Dog" class="object-cover w-full h-full"></div>
+      <div class="rounded-2xl overflow-hidden border border-white/10"><img src="divine1.png" alt="Divine" class="object-cover w-full h-full"></div>
     </div>
   </section>
-
   <!-- CONTACT -->
   <section id="contact" class="max-w-6xl mx-auto px-6 py-20">
     <h2 class="text-3xl font-bold mb-6">Start a project</h2>
