--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
   <section id="ads" class="max-w-6xl mx-auto px-6 py-20">
     <h2 class="text-3xl font-bold mb-6">Clothing Brand Advertisements</h2>
     <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-6">
-      <div class="rounded-2xl overflow-hidden border border-white/10 flex items-center justify-center bg-neutral-900">
-        <img src="hs.png" alt="Clothing Ad" class="object-contain h-full w-full">
+      <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900">
+        <img src="hs.png" alt="Clothing Ad" class="object-cover w-full h-96">
       </div>
       <div class="rounded-2xl overflow-hidden border border-white/10 flex items-center justify-center bg-neutral-900">
         <img src="ghostfit.png" alt="Ghostfit" class="object-contain h-full w-full">
@@ -164,7 +164,7 @@
       <div class="rounded-2xl overflow-hidden border border-white/10"><img src="skele.png" alt="Skeleton" class="object-cover w-full h-full"></div>
       <div class="rounded-2xl overflow-hidden border border-white/10"><img src="horses.jpg" alt="Horses" class="object-cover w-full h-full"></div>
       <div class="rounded-2xl overflow-hidden border border-white/10"><img src="dog.jpg" alt="Dog" class="object-cover w-full h-full"></div>
-      <div class="rounded-2xl overflow-hidden border border-white/10"><img src="divine1.png" alt="Divine" class="object-cover w-full h-full"></div>
+      <div class="rounded-2xl overflow-hidden border border-white/10"><img src="bradpitt-1.jpg" alt="Brad Pitt" class="object-cover w-full h-full"></div>
     </div>
   </section>
   <!-- CONTACT -->
