--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
   <section id="ads" class="max-w-6xl mx-auto px-6 py-20">
     <h2 class="text-3xl font-bold mb-6">Clothing Brand Advertisements</h2>
     <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-6">
-      <div class="rounded-2xl overflow-hidden border border-white/10 bg-neutral-900">
-        <img src="hs.png" alt="Clothing Ad" class="object-cover w-full h-96">
+       <div class="rounded-2xl overflow-hidden border border-white/10 flex items-center justify-center bg-neutral-900">
+        <img src="hs.png" alt="Hell Star" class="object-contain h-full w-full">
       </div>
       <div class="rounded-2xl overflow-hidden border border-white/10 flex items-center justify-center bg-neutral-900">
         <img src="ghostfit.png" alt="Ghostfit" class="object-contain h-full w-full">
