--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <h2 class="text-3xl font-bold mb-6">Clothing Brand Advertisements</h2>
     <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-6">
        <div class="rounded-2xl overflow-hidden border border-white/10 flex items-center justify-center bg-neutral-900">
-        <img src="hs.png" alt="Hell Star" class="object-contain h-full w-full">
+        <img src="hs2.png" alt="Hell Star" class="object-contain h-full w-full">
       </div>
       <div class="rounded-2xl overflow-hidden border border-white/10 flex items-center justify-center bg-neutral-900">
         <img src="ghostfit.png" alt="Ghostfit" class="object-contain h-full w-full">
